Bug 157198 - French guillemets quotation marks replacement half-messed up if added in formula bar
Summary: French guillemets quotation marks replacement half-messed up if added in form...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.2.0.0.beta1+
Hardware: All Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:25.2.0 target:24.8.1.2 target:...
Keywords: bibisected, bisected, regression
Depends on:
Blocks: GTK3 AutoCorrect-Complete Calc-Formula-Bar
  Show dependency treegraph
 
Reported: 2023-09-11 23:02 UTC by Jeff F.
Modified: 2024-08-31 02:03 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Demonstration video (926.35 KB, video/webm)
2023-09-11 23:06 UTC, Jeff F.
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jeff F. 2023-09-11 23:02:30 UTC
Description:
Since recent versions of LibreOffice (7.5 at least, and also happens on 7.6) on Linux, with my French locale, I am utterly unable to type anything with "quotes" or « guillemets » inside a cell's contents, because it gets auto-converted to « whatever ".

Note that while my LibreOffice documents may be set to the relevant French locale (fr_CA), my system's locale is an English one (en_CA)

Steps to Reproduce:
1. Launch LibreOffice calc
2. Type this in a cell: banana apple pineapple
3. Set the document's language "for all document" to "French (Canada)"
4. Edit the cell's contents, try typing quotation marks around apple

Actual Results:
It becomes:

banana « apple" pineapple

Expected Results:
banana « apple » pineapple

..or at least:
banana "apple" pineapple

Not a mix of both.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 7.6.0.3 (X86_64) / LibreOffice Community
Build ID: 69edd8b8ebc41d00b4de3915dc82f8f0fc3b6265
CPU threads: 8; OS: Linux 6.4; UI render: default; VCL: gtk3
Locale: fr-CA (en_CA.UTF-8); UI: en-US
Flatpak
Calc: threaded
Comment 1 Jeff F. 2023-09-11 23:06:59 UTC
Created attachment 189506 [details]
Demonstration video

Preuve irréfutable 🧐
Comment 2 Jeff F. 2023-09-11 23:18:55 UTC
Note that it is impossible for the user to correct the string even by re-editing it, it always keep re-autocorrecting incorrectly.

My smart quotes / autocorrection settings are (re)set at the defaults.
Comment 3 stragu 2023-09-26 22:41:38 UTC
Thank you Jeff!

If I use the formula bar to insert the quotes, I can reproduce. I can't reproduce when editing the cell directly.
There is a mismatch between what is shown on canvas and in the formula bar.

Reminds me of bug 154623.

Tested with:

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 19e9fe7c8c89399753ac1730e1c76378b18418bc
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

As expected, no repro with gen VCL plugin.

My steps:
0. make sure language for all documents is French (Canada) or French (France)
1. write in cell A1: a b c
2. press Enter
3. up arrow back to A1
4. click into formula bar to add quotes before and after the letter b

Bibisected with linux-64-7.2 repo to first bad commit 6369dbd4a2915435b19c43ef4db47139279b71c7 which points to core commit:

commit e388a4d6d7ab355fc7aa5fca05e06070693847e9
author	Caolán McNamara Tue Mar 01 16:50:37 2022 +0000
committer	Adolfo Jayme Barrientos Wed Mar 02 04:30:47 2022 +0100
Resolves: tdf#145580 need to use gtk_im_context_filter_keypress
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/130802

Caolán, can you please have a look?
Comment 4 Caolán McNamara 2023-09-27 20:16:09 UTC
its probably the same underlying problem as bug #155453 with some problem around input method input
Comment 5 Commit Notification 2024-08-29 07:04:53 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/0e3eae5de89027e8e4c03391ebeec1fb9729fa1b

tdf#157198 auto correct done on EndExtTextInput not seen until next update

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Caolán McNamara 2024-08-29 07:10:09 UTC
Input bar autocorrect gets down but doesn't notify on the autocorrect change done during the input method so the view in the document continues to show the pre-autocorrect state. Fixed in trunk, backports to 24-8 and 24-2 in gerrit
Comment 7 Commit Notification 2024-08-29 08:43:22 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/69c590e4082cde4d172e807a46ac6cf7888dd522

tdf#157198 auto correct done on EndExtTextInput not seen until next update

It will be available in 24.2.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2024-08-29 08:43:25 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/a67ec09810bda7480e55bc59522966dd032fecb7

tdf#157198 auto correct done on EndExtTextInput not seen until next update

It will be available in 24.8.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2024-08-30 13:45:02 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-24-2-6":

https://git.libreoffice.org/core/commit/d5d3c90aa7a6b116e82ead4d5990b8459c0e7562

tdf#157198 auto correct done on EndExtTextInput not seen until next update

It will be available in 24.2.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2024-08-31 02:02:45 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-24-8-1":

https://git.libreoffice.org/core/commit/0d620f19222abca77dea75ecdf3f460486b81d43

tdf#157198 auto correct done on EndExtTextInput not seen until next update

It will be available in 24.8.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.