tdf#157198 auto correct done on EndExtTextInput not seen until next update

Change-Id: I57f6c08e97f1f53411fd9e1e83c7faa0ae5788d6
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/172570
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>